--- a/README.asciidoc
+++ b/README.asciidoc
@@ -1,3 +1,4 @@
-=== WELCOME
+== WELCOME
 
-https://github.com/ipa-fmw-ak/Administration/wiki[HOME]
+
+Visit https://github.com/ipa-fmw-ak/Administration/wiki[WIKI] for the Guides.
